...
        <ScrollView contentContainerStyle={styles.scrollViewContent} testID='BookingScreen'>
            <View style={styles.container}>
                <ImageCus uri={movie.thumbnail} style={thumbnailStyle} />
                <Text style={styles.title}>{movie.title}</Text>
                <Text style={styles.description}>{movie.description}</Text>
                <Button
                    title={movie.booked ? 'Đã xem' : 'Đặt vé'}
                    onPress={handleConfirmBooking}
                    disabled={movie.booked}
                    style={buttonStyle}
                    testID={`ConfirmBookingButton`}
                />
            </View>
        </ScrollView>
    );
};

...
